--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "^1.8.1",
-    "gh-pages": "^6.3.0"
+    "axios": "^1.8.1"
   }
 }
